# multiverse

./: docker-compose.yml  index.html  multiverse.code-workspace
service/: .env  .rustfmt.toml  Cargo.toml  Dockerfile  docker-compose.yml  docker.sh
service/docker/: pre-build.sh
service/migrations/: 00001-users-table.sql  00002-worlds-table.sql  00003-worlds-rename-key.sql
service/src/: authentication.rs  authorization.rs  http.rs  infrastructure.rs  lib.rs  main.rs  model.rs  users.rs
service/src/authentication/: configure.rs  endpoints.rs  model.rs  service.rs
service/src/authentication/endpoints/: login_user.rs  model.rs  register_user.rs
service/src/authentication/model/: authenticated_user.rs
service/src/authentication/service/: authenticate_user.rs  register_user.rs
service/src/authorization/: authorizer.rs  configure.rs  model.rs  service.rs
service/src/authorization/model/: authorization.rs  token.rs
service/src/authorization/service/: generate_authorization.rs  token.rs
service/src/http/: link.rs  pagination.rs  patch.rs  problem.rs  sorts.rs
service/src/http/problem/: response.rs  validation.rs
service/src/infrastructure/: database.rs  healthchecker.rs  server.rs  service.rs
service/src/infrastructure/database/: health.rs  migrate.rs  postgres.rs
service/src/infrastructure/healthchecker/: check_health.rs  configure.rs  endpoints.rs  model.rs  service.rs
service/src/infrastructure/server/: testing.rs
service/src/model/: identity.rs  model.rs  page.rs  pagination.rs  sorts.rs
service/src/testing/: database.rs
service/src/testing/database/: container.rs  postgres.rs
service/src/users/: configure.rs  endpoints.rs  model.rs  repository.rs  service.rs
service/src/users/endpoints/: errors.rs  lookup_user.rs  lookup_username.rs  model.rs  patch_user.rs  register_user.rs
service/src/users/model/: email_address.rs  password.rs  user.rs  user_id.rs  username.rs
service/src/users/repository/: create.rs  errors.rs  find.rs  parse.rs  update.rs
service/src/worlds/: configure.rs  endpoints.rs  model.rs  repository.rs  service.rs
service/tests/: cucumber.rs  health.rs  integration_tests.rs  service.rs
service/tests/data/: mod.rs  user.rs  world.rs
service/tests/features/: health.feature
service/tests/integration/: health.rs  mod.rs  service.rs
service/tests/service/: login.rs  mod.rs  response.rs  seed.rs  service.rs
service/tests/snapshots/: health__integration_test_health-2.snap  health__integration_test_health.snap  integration_tests__tests__users__lookup_username__lookup_known_username-known-headers.snap  integration_tests__tests__users__lookup_username__lookup_unknown_username-,.;'__[]<>?:"|{}-body.snap  integration_tests__tests__users__lookup_username__lookup_unknown_username-unknown-headers.snap  integration_tests__tests__users__register__register-all_blank-body.snap  integration_tests__tests__users__register__register-all_blank-headers.snap  integration_tests__tests__users__register__register-no_email-body.snap  integration_tests__tests__users__register__register_validation_failure-no_password-body.snap  integration_tests__tests__users__register__register_validation_failure-no_username-body.snap
service/tests/steps/: health.rs  users.rs
service/tests/tests/: harness.rs  health.rs  mod.rs
service/tests/users/: mod.rs  seed.rs  steps.rs
service/tests/world/: assertions.rs  json.rs  mod.rs  seed.rs  service.rs  table.rs
(+206 files in other folders)
