[package]
name = "multiverse"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "multiverse_lib"

[[bin]]
name = "multiverse"

[dependencies]
actix-cors = "0.2.0"
actix-http = "1.0.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
argonautica = "0.2.0"
async-trait = "0.1.30"
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
bytes = "0.5.4"
chrono = "0.4.11"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
postgres-types = { version = "0.1.1", features=["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
rust-embed = "5.5.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
simple-error = "0.2.1"
testcontainers = "0.9.1"
thiserror = "1.0.16"
tokio-postgres = { version = "0.5.4", features=["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.13"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.5"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
galvanic-assert = "0.8.7"
insta = "0.16.0"
rstest = "0.6.3"
uritemplate = "0.1.2"
